<resources>
    <string name="app_name">Mercado</string>

    <string name="terms_policy">
        <font color="#212121">By continuing you agree to our</font>
        <font color="#53b175">Terms of Service </font>
        <font color="#212121">and</font>
        <font color="#53b175">Privacy Policy.</font>
    </string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

    <string-array name="governorate_array">
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>El Wadi El Gedid</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_emails_and_password">Enter your emails and password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Signup</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="allCategories">All Categories</string>


    <string name="ERROR_WEAK_PASSWORD">The password is invalid it must 6 characters at least</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">This operation is not allowed. You must enable this service in the console.</string>
    <string name="ERROR_INVALID_USER_TOKEN">The user\'s credential is no longer valid.The user must sign in again.</string>
    <string name="ERROR_USER_NOT_FOUND">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="ERROR_USER_DISABLED">The user account has been disabled by an administrator.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">This credential is already associated with a different user account.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="ERROR_REQUIRES_RECENT_LOGIN">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="ERROR_USER_MISMATCH">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="ERROR_WRONG_PASSWORD">The password is invalid</string>
    <string name="ERROR_INVALID_EMAIL">The email address is badly formatted.</string>
    <string name="ERROR_INVALID_CREDENTIAL">The supplied auth credential is malformed or has expired.</string>
    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">The custom token corresponds to a different audience.</string>
    <string name="ERROR_INVALID_CUSTOM_TOKEN">The custom token format is incorrect. Please check the documentation.</string>
    <string name="NO_INTERNET_CONNECTION">No internet connection</string>
    <string name="add_to_cart">add to cart</string>
    <string name="brand_text">Brand</string>
    <string name="size_text">Size</string>
    <string name="color_text">Color</string>
    <string name="quality">Quality</string>
    <string name="price_text">Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_size">Display Size</string>
    <string name="graphics_card_type">Graphics Card Type</string>
    <string name="model">Model</string>
    <string name="operating_system">Operating System</string>
    <string name="processor">Processor</string>
    <string name="ram">RAM</string>
    <string name="storage">Storage</string>
    <string name="compatible_with">Compatible With</string>
    <string name="warranty_years">Warranty Years</string>
    <string name="water_resistant">Water Resistant</string>
    <string name="front_camera">Front Camera</string>
    <string name="rear_camera">Rear Camera</string>
    <string name="memory">Memory</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="connectivity">Connectivity</string>
    <string name="country">Country</string>
    <string name="Features">Features</string>
    <string name="item_capacity">Capacity</string>
    <string name="item_type">Type</string>
    <string name="power">Power</string>
    <string name="logout">logout</string>
    <string name="new_arrival">New Arrival</string>
    <string name="exclusive_offers">Exclusive Offers</string>
    <string name="searchForCategoryOrBrand">Search for category or brand</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_item_found">No Item Found</string>
    <string name="no_order_found">No Order Found</string>


</resources>