<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsItemClothingActivity">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<ScrollView
    app:layout_constraintTop_toBottomOf="@+id/slider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:id="@+id/price_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/price_value"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/brand_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/price_linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_text"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/brand_value"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/size_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/brand_linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_text"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/size_value"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/size_linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_text"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/color_value"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quality_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/color_linear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quality"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/quality_value"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/cart_button"
        android:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@drawable/cart_button"
            android:backgroundTint="@color/accent"
            android:drawableStart="@drawable/ic_add_shopping_cart"
            android:drawableTint="@color/icons"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>